oxiplate/tests/broken/extends/extends-non-existent-deep.stderr
error: couldn't read `$DIR/templates/extends-non-existent.html.oxip`: No such file or directory (os error 2)
 --> templates/extends-missing.html.oxip
  |
  | {% extends "extends-non-existent.html.oxip" %}
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Must provide a path to a template that exists. E.g., `{% extends "path/to/template.html.oxip" %}`
 --> templates/extends-missing.html.oxip
  |
  | {% extends "extends-non-existent.html.oxip" %}
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
